# fuesim-digital

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  LICENSE-README.md  README.md  docker-compose.yml  inspired-by-or-copied-from-list.html  jest.base.config.js  killdatabase.sh  package-lock.json  package.json  third-party-license-json-to-html.cjs
backend/: .gitignore  README.md  drizzle.config.ts  eslint.config.js  events_to_xes.py  jest.config.js  mine.py  mining-service.py  package-lock.json  package.json  pre-process.sh  pyproject.toml  tsconfig.json
backend/drizzle/: 0000_initial.sql  0000_talented_squadron_supreme.sql  0001_drizzle_migrations.sql  0002_rm_typeorm_migrations.sql  0003_table_rename.sql  0004_exercise_last_used_at.sql  0004_oidc.sql  0005_exercise_manager.sql  0005_exercise_template.sql  0006_created_at.sql  0006_exercise_user.sql  0006_ids_to_keys.sql  0007_access_key.sql  0007_base_template.sql  0007_elements43.sql  0007_elements56.sql  0007_elements71.sql  0007_marketplace.sql  0007_parallel_exercise.sql  0008_access-keys-to-db.sql  0008_elements57.sql  0008_elements72.sql  0008_parallel_exercise_exercise.sql  0009_elements59.sql  0009_elements73.sql  0009_marketplace.sql  0009_organisations.sql  0009_todo-squash.sql  0009_unique_constraints_and_template_state_type.sql  0010_actions-unique.sql  0010_elements60.sql  0010_elements75.sql  0010_invite_link.sql  0010_organisations.sql  0011_elements61.sql  0011_personal_org.sql  0012_elements63.sql  0012_marketplace.sql  (+3 more)
(+1567 files in other folders)
